//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package sigma_rpc_simple;

service SigmaRpc {
  rpc RizzPing(RizzPing) returns (GoonPong) {}
  rpc RizzUni(BarSub) returns (stream FooResponse) {}
  rpc RizzUni2(BarSub) returns (stream FooResponse) {}
  rpc Build(EnvelopeBuildRequest) returns (EnvelopeBuildResponse) {}
  rpc Build2(EnvelopeBuildRequest) returns (EnvelopeBuildResponse) {}
  rpc OwnerLookup(TransparentId) returns (BuildResponse) {}
  rpc TestDecimals(UD128) returns (D64) {}
}