
syntax = "proto3";
package rizz_types;

message BarSub {}

message FooResponse {}
