//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package extra_types;

import "custom_types.proto";
import "goon_types.proto";

message VecOrder {
  repeated Order value = 1;
}

message BuildConfig {
  int64 timeout = 1;
  goon_types.Id owner = 3;
}

message BuildRequest {
  BuildConfig config = 1;
  goon_types.RizzPing ping = 2;
  goon_types.Id owner = 3;
}

message BuildResponse {
  goon_types.ServiceStatus status = 1;
  EnvelopeGoonPong envelope = 2;
}

message EnvelopeBuildRequest {
  BuildRequest payload = 1;
  string trace_id = 2;
}

message EnvelopeBuildResponse {
  BuildResponse payload = 1;
  string trace_id = 2;
}

message EnvelopeGoonPong {
  goon_types.GoonPong payload = 1;
  string trace_id = 2;
}

message LotMutexHolder {
  custom_types.MEx stdd = 1;
}

message Order {
  uint32 id = 1;
}

message Orders {
  repeated VecOrder orders = 1;
}

message StdMutexHolder {
  custom_types.MEx stdd = 1;
}

